2005-02-12  Chris Toshok  <toshok@ximian.com>

	* Assembly.cs: Correct the type of MonoDebugger_MakeArrayType.

2005-02-12  Ben Maurer  <bmaurer@ximian.com>

	* Binder.cs (SelectProperty): Use -1 as the dummy `I don't know
	how many types' value.

2005-02-11  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs: Fix warning.

2005-02-10  Martin Baulig  <martin@ximian.com>

	* Module.cs (MonoDebugger_ResolveType): New internal method.

	* Assembly.cs (MonoDebugger_MakeArrayType): New internal method.
	(MonoDebugger_GetTypeToken): New internal method.

2005-02-10  Martin Baulig  <martin@ximian.com>

	* Assembly.cs (MonoDebugger_GetMethodIndex): New internal method.

2005-02-10  Marek Safar  <marek.safar@seznam.cz>

	* Assembly.cs,
	* ConstructorInfo.cs,
	* EventInfo.cs,
	* FieldInfo.cs,
	* MemberInfo.cs,
	* MethodBase.cs,
	* MethodInfo.cs,
	* PropertyInfo.cs: ClassInterfaceType is None.

Thu Feb 3 15:22:55 CET 2005 Paolo Molaro <lupus@ximian.com>

	* Module.cs: removed the finalizer and the now unused Close() icall.

2005-01-21  Sebastien Pouliot  <sebastien@ximian.com>

	* Assembly.cs: Fixed add for ModuleResolve.

2005-01-19  Zoltan Varga  <vargaz@freemail.hu>

	* LocalVariableInfo.cs: Add ToString method.

	* ExceptionHandlingClause.cs: Implement this.

2005-01-18  Zoltan Varga  <vargaz@freemail.hu>

	* MethodBase.cs MonoMethod.cs: Hopefully fix the build.

	* MethodBase.cs MonoMethod.cs: Implement 2.0 GetMethodBody ().

2005-01-03  Martin Baulig  <martin@ximian.com>

	* MonoGenericMethod.cs
	(MonoGenericMethod.get_reflected_type): Removed.
	(MonoGenericMethod.ReflectedType): Make this an icall.
	(MonoGenericCMethod.ReflectedType): Likewise.	

2004-12-29  Martin Baulig  <martin@ximian.com>

	* MonoGenericMethod.cs: New file.

2004-12-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* Assembly.cs: Added private LoadAssemblyPermissions to get the 
	declarative security permission sets (minimum, optional and refused)
	for the assembly.
