@@ -121,8 +121,24 @@ namespace System.Reflection {
 			}
 		}
 
-		public override string ToString () {
+		public override string ToString ()
+		{
 			return EventHandlerType + " " + Name;
+		}
+
+		public override bool IsDefined (Type attributeType, bool inherit)
+		{
+			return MonoCustomAttrs.IsDefined (this, attributeType, inherit);
+		}
+
+		public override object[] GetCustomAttributes( bool inherit)
+		{
+			return MonoCustomAttrs.GetCustomAttributes (this, inherit);
+		}
+
+		public override object[] GetCustomAttributes( Type attributeType, bool inherit)
+		{
+			return MonoCustomAttrs.GetCustomAttributes (this, attributeType, inherit);
 		}
 
 	}
